Feature (navigation, projects, skills, education, experience and home) Feat: major style changes and fix languages dropdown menu

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Garante que a barra de rolagem esteja sempre visível */
+html {
+  overflow-y: scroll;
+}
+
 @layer base {
   :root {
     --background: 222.2 84% 4.9%;
